# PDCurses

./: CMakeLists.txt
src/common/: pdcurses.rc
